--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@
 
 body {
 	background-image: url(".././public/bakgrunn.png");
-	background-size: cover;
+	background-size: 100vw;
 	background-repeat: no-repeat;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	margin: 0;
 }
