--- a/src/Pages/Homepage.css
+++ b/src/Pages/Homepage.css
@@ -1,6 +1,16 @@
-.HomepageContainer {
+.TileContainer {
+	display: flex;
+	flex-direction: row;
+	max-width: 100%;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+}
+
+.headerContainer {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	max-width: 95vw;
 }
