fikset game history og fjernet mulighet for å legge til spiller som allerede finnes

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 body {
 	background-image: url(".././public/bakgrunn.png");
 	background-size: 100vw;
-	background-repeat: no-repeat;
+	background-attachment: fixed;
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
